@@ -1,4 +1,6 @@
 ver 0.23.10 (not yet released)
+* Windows
+  - log to stdout by default, don't require "log_file" setting
 
 ver 0.23.9 (2022/08/18)
 * input
